# diagram-picture-renamer

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
scripts/: test_smoke.py
src/: image_handler.py  llm_integration.py  main.py  naming_engine.py  utils.py
tests/: test_naming.py
tmp/: .gitkeep
